--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -2,4 +2,10 @@
 # See http://github.com/svenfuchs/rails-i18n/tree/master/rails%2Flocale for starting points.
 
 en:
+  formtastic:
+    actions:
+      user: 
+        create: Login
+      create: Create
+      update: Save      
   hello: "Hello world"
